--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div>and I am a passionate</div>
                 <span id="element"></span>
                 <div class="buttons">
-                    <a href="https://drive.google.com/file/d/16hZXPDM2vWxXxREkG2I1aTG_om3W9nZJ/view?usp=sharing" target="_blank" class="btn">Resume</a>
+                    <a href="https://drive.google.com/file/d/1aoi4yWTJT5X3cxab_eb-kDsXT2p6wz2j/view?usp=sharing" target="_blank" class="btn">Resume</a>
                 </div>
             </div>
             <div class="rightSection">
@@ -103,7 +103,25 @@
                         <a href="https://svirtz.com/" target="_blank">svirtz.com</a>
                     </div>
                 </div>
-                <!--  2nd -->
+                <!-- 1 st  -->
+                <div class="experienceItem">
+                    <img src="images/Svirtz_logo.png" alt="Svirtz Technology Solutions Pvt Ltd">
+                    <div class="experienceDetails">
+                        <h2>Svirtz Technology Solutions Pvt Ltd</h2>
+                        <br /><br />
+                        <ul>
+                            <li>Collaborated on a variety of machine learning and data science projects.</li>
+                            <li>Utilized a diverse set of machine learning tools and techniques to develop, optimize, and deploy AI models, gaining
+                                practical expertise in the field.</li>
+                        </ul>
+                        <br/>
+                        <div class="date-box">
+                            <p>October 2022 - December 2023</p>
+                        </div>
+                        <a href="https://svirtz.com/" target="_blank">svirtz.com</a>
+                    </div>
+                </div>
+                <!--  3rd -->
                 <div class="experienceItem">
                     <img src="images/codeclause_logo.png" alt="CodeClause">
                     <div class="experienceDetails">
@@ -121,7 +139,7 @@
                     </div>
                 </div>
 
-                <!-- 3rd -->
+                <!-- 4th -->
                 <div class="experienceItem">
                     <img src="images/Prodigy_logo.png" alt="Prodigy InfoTech">
                     <div class="experienceDetails">
@@ -141,7 +159,7 @@
 
                 
 
-                <!-- 4th -->
+                <!-- 5th -->
                 <div class="experienceItem">
                     <img src="images/PHN_logo.png" alt="PHN Technology Pvt Ltd">
                     <div class="experienceDetails">
