--- a/index.html
+++ b/index.html
@@ -98,27 +98,26 @@
                         </ul>
                         <br/>
                         <div class="date-box">
-                            <p>October 2022 - December 2023</p>
+                            <p>October 2023 - Present</p>
                         </div>
                         <a href="https://svirtz.com/" target="_blank">svirtz.com</a>
                     </div>
                 </div>
-                <!-- 1 st  -->
+                <!-- 2 st  -->
                 <div class="experienceItem">
-                    <img src="images/Svirtz_logo.png" alt="Svirtz Technology Solutions Pvt Ltd">
+                    <img src="images/data_lumina_logo.png" alt="Data Lumina">
                     <div class="experienceDetails">
-                        <h2>Svirtz Technology Solutions Pvt Ltd</h2>
+                        <h2>Data Lumina</h2>
                         <br /><br />
                         <ul>
-                            <li>Collaborated on a variety of machine learning and data science projects.</li>
-                            <li>Utilized a diverse set of machine learning tools and techniques to develop, optimize, and deploy AI models, gaining
-                                practical expertise in the field.</li>
+                            <li>Worked on Data Labelling and Data Encoding.</li>
+                            <li>Engaged to perform Data Analysis and Natural Language processing.</li>
                         </ul>
                         <br/>
                         <div class="date-box">
-                            <p>October 2022 - December 2023</p>
+                            <p>January 2024 - Present</p>
                         </div>
-                        <a href="https://svirtz.com/" target="_blank">svirtz.com</a>
+                        <a href="https://www.datalumina.in/" target="_blank">datalumina.in</a>
                     </div>
                 </div>
                 <!--  3rd -->
@@ -443,7 +442,7 @@
         <h1>Coding Profiles</h1>
         <div class="profileItem">
             <img src="images/leetcode_icon.png" alt="leetcode">
-            <a href="https://leetcode.com/Harsh425/" class="profileLink" target="_blank">Leetcode (400+ Problems Solved)</a>
+            <a href="https://leetcode.com/Harsh425/" class="profileLink" target="_blank">Leetcode (550+ Problems Solved)</a>
         </div>
         <div class="profileItem">
             <i class="fab fa-hackerrank profileIcon"></i>
@@ -459,11 +458,11 @@
         </div>
         <div class="profileItem">
             <i class="fas fa-code-branch profileIcon"></i>
-            <a href="https://www.codechef.com/users/harsh425" class="profileLink" target="_blank">CodeChef (Rating - 1494)</a>
+            <a href="https://www.codechef.com/users/harsh425" class="profileLink" target="_blank">CodeChef (Rating - 1504)</a>
         </div>
         <div class="profileItem">
             <i class="fas fa-code profileIcon"></i>
-            <a href="https://codeforces.com/profile/harsh425" class="profileLink" target="_blank">Codeforces (Rating - 936)</a>
+            <a href="https://codeforces.com/profile/harsh425" class="profileLink" target="_blank">Codeforces (Rating - 1173)</a>
         </div>
     </section>
     
@@ -512,11 +511,6 @@
         });
     });
     </script>
-
-
-
-
-    
 
 </body>
 </html>
