--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                         <br /><br />
                         <ul>
                             <li>Collaborated on a variety of machine learning and data science projects.</li>
+                            <p></p>
                             <li>Utilized a diverse set of machine learning tools and techniques to develop, optimize, and deploy AI models, gaining
                                 practical expertise in the field.</li>
                         </ul>
@@ -111,6 +112,7 @@
                         <br /><br />
                         <ul>
                             <li>Worked on Data Labelling and Data Encoding.</li>
+                            <p></p>
                             <li>Engaged to perform Data Analysis and Natural Language processing.</li>
                         </ul>
                         <br/>
@@ -128,6 +130,7 @@
                         <br><br><br>
                         <ul>
                             <li>Worked on various Data Science and Machine learning related tasks.</li>
+                            <p></p>
                             <li>Utilized Various Python Libraries such as Numpy, Pandas, Matplotlib, Scikit-learn, etc.</li>
                         </ul>
                         <br/><br><br>
@@ -146,6 +149,7 @@
                         <br /><br /><br>
                         <ul>
                             <li>Conducted data-driven analysis to enhance customer retention in the telecom industry.</li>
+                            <p></p>
                             <li>Utilized Python and Apriori Algorithm for market basket analysis, informing targeted sales approaches.</li>
                         </ul>
                         <br/><br>
@@ -166,6 +170,7 @@
                         <br /><br />
                         <ul>
                             <li>Worked on Data Science and Machine learning related tasks.</li>
+                            <p></p>
                             <li>Utilized Various Python Libraries such as Numpy, Pandas, Matplotlib, Scikit-learn, etc.</li>
                         </ul>
                         <br/>
@@ -185,6 +190,92 @@
     <section id = 'projectsSection' class="projectsSection">
         <h1>Projects</h1>
 
+        <!-- Full Stack Projects -->
+        <section class="projectCategory">
+            <h2>Full Stack Projects</h2>
+            
+            <div class="projectsList">
+                <!-- Movie Recommendation System -->
+                <div class="projectItem">
+                    <img src="images/disaster_img.png" alt="Disaster Management System">
+                    <div class="projectDetails">
+                        <h2>Disaster Management System</h2>
+                        <br>
+                        <ul>
+                            <li>Implemented AI-driven Disaster Management System integrating real-time prediction, dynamic resource allocation, and critical infrastructure vulnerability assessment for enhanced preparedness and response.</li>
+                            <p></p>
+                            <li>Developed AI-powered Decision Support System with real-time social media analysis and post-disaster data analysis to facilitate informed decision-making and effective long-term recovery planning.</li>
+                        </ul>
+                        <br><br><br>
+                        <a href="https://github.com/Harshch42/Disaster-Management-System.git" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                            <path d="M8 .154a8 8 0 0 0-2.534 15.635c.4.07.546-.174.546-.385 0-.19-.007-.692-.01-1.36-2.01.368-2.44-.49-2.44-.49-.33-.838-.805-1.06-.805-1.06-.656-.448.05-.44.05-.44.725.05 1.107.74 1.107.74.642 1.1 1.678.783 2.085.597.065-.463.252-.78.46-.958-1.61-.183-3.3-.805-3.3-3.578 0-.79.28-1.44.74-1.95-.08-.183-.32-.925.064-1.92 0 0 .6-.195 1.98.74a6.72 6.72 0 0 1 1.8-.245c.61.003 1.22.08 1.8.244 1.37-.936 1.97-.74 1.97-.74.384.995.144 1.737.07 1.92.46.51.74 1.16.74 1.95 0 2.777-1.69 3.39-3.31 3.57.26.23.49.672.49 1.36 0 .984-.008 1.777-.008 1.995 0 .214.145.46.55.384A8.003 8.003 0 0 0 8 .154z"/>
+                        </svg> GitHub
+                    </a>
+                    </div>
+                    <div class="technologiesUsed">
+                        <div class="techBox">ReactJs</div>
+                        <div class="techBox">Python</div>
+                        <div class="techBox">Machine Learning</div>
+                        <div class="techBox">Tensorflow</div>
+                        <div class="techBox">Flask</div>
+                        
+                    </div>
+                </div>
+
+                <!-- Phishing Detection -->
+                <div class="projectItem">
+                    <img src="images/phish_img.jpg" alt="Phishing Detection">
+                    <div class="projectDetails">
+                        <h2>Phishing Detection</h2>
+                        <br><br>
+                        <ul>
+                            <li>Created a phishing detection website with MERN stack for robust front-end and back-end capabilities.</li>
+                            <p></p>
+                            <li>Created a phishing detection website with MERN stack for robust front-end and back-end capabilities.</li>
+                        </ul>
+                        <br>
+                        <a href="https://github.com/Harshch42/Phishing-detection.git" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                            <path d="M8 .154a8 8 0 0 0-2.534 15.635c.4.07.546-.174.546-.385 0-.19-.007-.692-.01-1.36-2.01.368-2.44-.49-2.44-.49-.33-.838-.805-1.06-.805-1.06-.656-.448.05-.44.05-.44.725.05 1.107.74 1.107.74.642 1.1 1.678.783 2.085.597.065-.463.252-.78.46-.958-1.61-.183-3.3-.805-3.3-3.578 0-.79.28-1.44.74-1.95-.08-.183-.32-.925.064-1.92 0 0 .6-.195 1.98.74a6.72 6.72 0 0 1 1.8-.245c.61.003 1.22.08 1.8.244 1.37-.936 1.97-.74 1.97-.74.384.995.144 1.737.07 1.92.46.51.74 1.16.74 1.95 0 2.777-1.69 3.39-3.31 3.57.26.23.49.672.49 1.36 0 .984-.008 1.777-.008 1.995 0 .214.145.46.55.384A8.003 8.003 0 0 0 8 .154z"/>
+                        </svg> GitHub
+                    </a>
+                    </div>
+                    <div class="technologiesUsed">
+                        <div class="techBox">ReactJs</div>
+                        <div class="techBox">Python</div>
+                        <div class="techBox">Machine Learning</div>
+                        <div class="techBox">Tensorflow</div>
+                        <div class="techBox">Flask</div>
+                        <div class="techBox">Mongodb</div>
+                    </div>
+                </div>
+                <!-- Health-Care-Tool -->
+                <div class="projectItem">
+                    <img src="images/health.png" alt="Health-Care-tool">
+                    <div class="projectDetails">
+                        <h2>Health-Care-Tool</h2>
+                        <br><br>
+                        <ul>
+                            <li>Developed a healthcare tool using Streamlit, incorporating machine learning models for diabetes, heart disease, and liver disease prediction.</li>
+                            <p></p>
+                            <li>Utilized datasets from reputable sources like the University of California Irvine's Machine Learning Repository, demonstrating a commitment to quality data in the development of health-focused applications.</li>
+                        </ul>
+                        <br><br><br><br>
+                        <a href="https://github.com/Harshch42/Health-Care-Tool.git" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                            <path d="M8 .154a8 8 0 0 0-2.534 15.635c.4.07.546-.174.546-.385 0-.19-.007-.692-.01-1.36-2.01.368-2.44-.49-2.44-.49-.33-.838-.805-1.06-.805-1.06-.656-.448.05-.44.05-.44.725.05 1.107.74 1.107.74.642 1.1 1.678.783 2.085.597.065-.463.252-.78.46-.958-1.61-.183-3.3-.805-3.3-3.578 0-.79.28-1.44.74-1.95-.08-.183-.32-.925.064-1.92 0 0 .6-.195 1.98.74a6.72 6.72 0 0 1 1.8-.245c.61.003 1.22.08 1.8.244 1.37-.936 1.97-.74 1.97-.74.384.995.144 1.737.07 1.92.46.51.74 1.16.74 1.95 0 2.777-1.69 3.39-3.31 3.57.26.23.49.672.49 1.36 0 .984-.008 1.777-.008 1.995 0 .214.145.46.55.384A8.003 8.003 0 0 0 8 .154z"/>
+                        </svg> GitHub
+                    </a>
+                    </div>
+                    <div class="technologiesUsed">
+                        <div class="techBox">Python</div>
+                        <div class="techBox">Machine Learning</div>
+                        <div class="techBox">Scikit-Learn</div>
+                        <div class="techBox">Streamlit</div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
         <!-- Data Science Projects -->
         <section class="projectCategory">
             <h2>Data Science Projects</h2>
@@ -198,6 +289,7 @@
                         <br>
                         <ul>
                             <li>Implemented Content-Based, Collaborative Filtering, and Genre-based recommendations techniques.</li>
+                            <p></p>
                             <li>Used Scikit-Learn, Cosine Similarity, Weighted Ratings, Searching and Sorting algorithms.</li>
                         </ul>
                         <br><br><br>
@@ -222,6 +314,7 @@
                         <br><br>
                         <ul>
                             <li>A Spam Classifier employing multiple machine learning techniques and feature extraction methods to distinguish between spam and non-spam messages.</li>
+                            <p></p>
                             <li>Implemented for user-friendly deployment via FastAPI, ensuring accurate message classification..</li>
                         </ul>
                         <br>
@@ -246,6 +339,7 @@
                         <br><br>
                         <ul>
                             <li>Accurate Bengaluru house price predictions based on location, amenities, and area.</li>
+                            <p></p>
                             <li>Utilizes data science libraries for data import, cleaning, and visualization.</li>
                         </ul>
                         <br><br><br><br>
@@ -279,6 +373,7 @@
                         <br>
                         <ul>
                             <li>Built using Python and Tkinter, this system facilitates inventory control, order tracking, and bill generation.</li>
+                            <p></p>
                             <li>Utilized SQLite3 and MySQL Workbench for database management and Tableau/Matplotlib for visual insights, enhancing inventory accuracy and decision-making.</li>
                         </ul>
                         <a href="https://github.com/Harshch42/ims-Python.git" target="_blank">
@@ -305,6 +400,7 @@
                         <br><br>
                         <ul>
                             <li>Crafting dynamic Tableau dashboards to distill meaningful insights.</li>
+                            <p></p>
                             <li>Converting data into actionable knowledge through interactive visuals.</li>
                         </ul>
                         <br><br><br><br>
@@ -329,6 +425,7 @@
                         <br><br>
                         <ul>
                             <li>Harnessing the capabilities of Power BI to transform data into actionable insights through compelling visualizations.</li>
+                            <p></p>
                             <li>Creating engaging Power BI dashboards that tell data-driven stories and empower informed decision-making.</li>
                         </ul>
                         <br><br>
@@ -364,6 +461,7 @@
                         <br>
                         <ul>
                             <li>Built using Python and Tkinter, this system facilitates inventory control, order tracking, and bill generation.</li>
+                            <p></p>
                             <li>Utilized SQLite3 and MySQL Workbench for database management and Tableau/Matplotlib for visual insights, enhancing inventory accuracy and decision-making.</li>
                         </ul>
                         <a href="https://github.com/Harshch42/Portfolio-Harsh.git" target="_blank">
@@ -387,6 +485,7 @@
                         <br>
                         <ul>
                             <li>A user-friendly weather app providing real-time weather updates for specified locations.</li>
+                            <p></p>
                             <li>Responsive design for seamless use on various devices and screen sizes.</li>
                         </ul>
                         <br><br><br>
@@ -413,6 +512,7 @@
                         <br>
                         <ul>
                             <li>A user-friendly to-do list website with essential features for task management and organization.</li>
+                            <p></p>
                             <li>Includes functions to add, edit, delete, and mark tasks as completed, ensuring a straightforward and intuitive user experience.</li>
                         </ul>
                         <br><br>
