--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h1>Skills</h1>
         <div class="skillsSection">
             <ul>
-                <li><span class="skillCategory">Programming Languages:</span> Python (Numpy, Pandas, Matplotlib), SQL, HTML, JavaScript.</li>
+                <li><span class="skillCategory">Programming Languages:</span> Python (Numpy, Pandas, Matplotlib), SQL, HTML.</li>
                 <br>
                 <li><span class="skillCategory">Developer Tools:</span> Jupyter notebook, VS Code, PyCharm, Tableau Desktop, MySQL Workbench, Power BI desktop, PostgreSQL.</li>
                 <br>
