--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-rights">&copy;
-            www.harshchaudhari.com | All rights reserved
+            harsh-chaudhari-portfolio.netlify.app | All rights reserved
         </div>
     </footer>
     
