--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
     var typed = new Typed('#element', {
-        strings: ['Frontend Developer', 'Python Developer','Machine Learning Engineer','Data Analyst','Data Scientist'],
+        strings: ['Frontend Developer', 'Python Developer','Machine Learning Engineer','Data Analyst','Data Scientist', "AI/ML Developer"],
         typeSpeed: 50,
     });
     </script>
